--- a/index.html
+++ b/index.html
@@ -297,7 +297,9 @@
 			</div>
 		</div>
 	</section>
-	<div class="banner container"></div>
+	<div class="banner container">
+		
+	</div>
 </main>
 
 <footer>
