Update: Login Register Home Connection

--- a/index.html
+++ b/index.html
@@ -292,8 +292,37 @@
 			</div>
 		</div>
 	</section>
-	<div class="banner container">
-		
+	<div class="banner container d-flex">
+		<div class="left">
+			<img src="./media/banner-image.png" alt="">
+		</div>
+		<div class="right">
+			<div class="d-flex flex-column gap-1">
+				<div class="text-primary">Promotion</div>
+				<div class="fs-2">Hurry up! 25% OFF</div>
+				<div class="fs-6">Thousands of jewelry are waiting for you</div>
+			</div>
+			<div class="">Offer expires in:</div>
+			<div class="d-flex">
+				<div class="d-flex flex-column">
+					<div class="box"><span>02</span></div>
+					<div>Days</div>
+				</div>
+				<div class="d-flex flex-column">
+					<div class="box"><span>12</span></div>
+					<div>Hours</div>
+				</div>
+				<div class="d-flex flex-column">
+					<div class="box"><span>45</span></div>
+					<div>Minutes</div>
+				</div>
+				<div class="d-flex flex-column">
+					<div class="box"><span>04</span></div>
+					<div>Seconds</div>
+				</div>
+			</div>
+			<button class="btn btn-success">Shop now</button>
+		</div>
 	</div>
 </main>
 
