--- a/register.html
+++ b/register.html
@@ -31,9 +31,9 @@
                 <label>I agree to the terms & conditions</label>
             </div>
             <div class="w-100">
-                <button class="btn-register">SiGN UP</button>
+                <a href="./login.html" class="btn-register">SIGN UP</a>
             </div>
-            <div class="my-3">Don’t have an account? <a href="" class="text-decoration-none fw-bold text-dark">Register</a></div>
+            <div class="my-3">Already have an account<a href="./login.html" class="text-decoration-none fw-bold text-dark">Login</a></div>
         </form>
     </div>
 </body>
