--- a/login.html
+++ b/login.html
@@ -25,8 +25,8 @@
             </div>
 
             <div class="my-3"><a href="" class="text-decoration-none fw-bold">Forgot Password?</a></div>
-            <button class="btn-login">SIGN IN</button>
-            <div class="my-3">Don’t have an account? <a href="" class="text-decoration-none fw-bold text-dark">Register</a></div>
+            <a href="./index.html" class="btn-login">SIGN IN</a>
+            <div class="my-3">Don’t have an account? <a href="./register.html" class="text-decoration-none fw-bold text-dark">Register</a></div>
         </form>
     </div>
 </body>
