--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<a class="navbar-brand text-white fs-3" href="#">Navalla</a>
 			<!--end::Brand_Item-->
 			<!--begin::Main Item-->
-			<div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+			<div class="collapse navbar-collapse justify-content-end" id="navbarNav">
 				<ul class="navbar-nav">
 					<li class="nav-item m-2"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
 					<li class="nav-item m-2"><a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Shop</a></li>
@@ -47,20 +47,6 @@
 			</div>
 			<!--end::Main Item-->
 			<!--begin::navbar tool-->
-			<div class="navbar-nav  d-flex align-items-center">
-				<div class="p-2">
-					<span class="color-E8ECEF"><i class="fa-solid fa-magnifying-glass"></i></span>
-				</div>
-				<div class="p-2">
-					<span class="color-E8ECEF"><i class="fa-regular fa-user"></i></span>
-				</div>
-				<div class="p-2">
-					<span class="color-E8ECEF"><i class="fa-solid fa-bag-shopping"></i></span>
-				</div>
-				<div class="p-2">
-					<span class="badge rounded-pill text-bg-light">2</span>
-				</div>
-			</div>
 			<!--begin::navbar tool-->
 		</div>
 	</nav>
@@ -78,7 +64,7 @@
 					<div class="col">
 						<h1 class="header-text">Elegance, Adorned.</h1>
 						<p class="sub-text">"Discover accessories that seamlessly blend fashion and function to elevate your look."</p>
-						<button class="btn btn-lg btn-black">Shopping Now</button>
+						<button class="btn btn-lg btn-black" onclick="window.location.href='#arrival'">Shopping Now</button>
 					</div>
 				</div>
 			</div>
@@ -86,17 +72,17 @@
 	</section>
 	<!--end::Header content-->
 	<!--Begin::new arrival Section-->
-	<section>
+	<section id="arrival">
 		<div class="card border-0">
 			<div class="card-header border-0">
 				<div class="container p-3 d-flex justify-content-between">
 					<h2 class="margin-left-5rem">New Arrivals</h2>
-					<button  class="btn btn-outline-dark">All Products</button>
+					<button  class="btn btn-outline-dark" onclick="window.location.href='#collection'">All Products</button>
 				</div>
 			</div>
 			<div class="card-body">
 				<div class="container-fluid flex-wrap d-flex align-items-center justify-content-center gap-3 p-2">
-					<div class="card border-0 custom-card grid" style="width: 16rem;">
+					<div class="card border-0 custom-card cursor-pointer" style="width: 16rem;" onclick="window.location.href='./cart.html'">
 						<img class="card-img-top card-product " src="./media/image-product.png" alt="" srcset="">
 						<div class="card-body">
 							<div class="rate d-flex">
@@ -110,7 +96,7 @@
 							<p class="card-text">$299.99</p>
 						</div>
 					</div>
-					<div class="card border-0 custom-card" style="width: 16rem;">
+					<div class="card border-0 custom-card cursor-pointer" style="width: 16rem;" onclick="window.location.href='./cart.html'">
 						<img class="card-img-top card-product " src="./media/image-product.png" alt="" srcset="">
 						<div class="card-body">
 							<div class="rate d-flex">
@@ -124,7 +110,7 @@
 							<p class="card-text">$299.99</p>
 						</div>
 					</div>
-					<div class="card border-0 custom-card" style="width: 16rem;">
+					<div class="card border-0 custom-card cursor-pointer" style="width: 16rem;" onclick="window.location.href='./cart.html'">
 						<img class="card-img-top card-product " src="./media/image-product.png" alt="" srcset="">
 						<div class="card-body">
 							<div class="rate d-flex">
@@ -138,7 +124,7 @@
 							<p class="card-text">$299.99</p>
 						</div>
 					</div>
-					<div class="card border-0 custom-card" style="width: 16rem;">
+					<div class="card border-0 custom-card cursor-pointer" style="width: 16rem;" onclick="window.location.href='./cart.html'">
 						<img class="card-img-top card-product " src="./media/image-product.png" alt="" srcset="">
 						<div class="card-body">
 							<div class="rate d-flex">
@@ -152,7 +138,7 @@
 							<p class="card-text">$299.99</p>
 						</div>
 					</div>
-					<div class="card border-0 custom-card" style="width: 16rem;">
+					<div class="card border-0 custom-card cursor-pointer" style="width: 16rem;" onclick="window.location.href='./cart.html'">
 						<img class="card-img-top card-product " src="./media/image-product.png" alt="" srcset="">
 						<div class="card-body">
 							<div class="rate d-flex">
@@ -171,7 +157,7 @@
 		</div>
 	</section>
 	<!--end::new arrival Section-->
-	<section>
+	<section id="collection">
 		<div class="card border-0">
 			<div class="card-header border-0">
 				<div class="container p-3 d-flex justify-content-between">
@@ -232,7 +218,7 @@
 			</div>
 			<div class="card-body">
 				<div class="container p-2 d-flex align-items-center justify-content-center gap-3">
-					<div class="card border-0 custom-card grid" style="width: 16rem;">
+					<div class="card border-0 custom-card cursor-pointer grid" style="width: 16rem;">
 						<img class="card-img-top card-product " src="./media/image-product.png" alt="" srcset="">
 						<div class="card-body">
 							<div class="rate d-flex">
@@ -246,7 +232,7 @@
 							<p class="card-text">$299.99</p>
 						</div>
 					</div>
-					<div class="card border-0 custom-card" style="width: 16rem;">
+					<div class="card border-0 custom-card cursor-pointer" style="width: 16rem;">
 						<img class="card-img-top card-product " src="./media/image-product.png" alt="" srcset="">
 						<div class="card-body">
 							<div class="rate d-flex">
@@ -260,7 +246,7 @@
 							<p class="card-text">$299.99</p>
 						</div>
 					</div>
-					<div class="card border-0 custom-card" style="width: 16rem;">
+					<div class="card border-0 custom-card cursor-pointer" style="width: 16rem;">
 						<img class="card-img-top card-product " src="./media/image-product.png" alt="" srcset="">
 						<div class="card-body">
 							<div class="rate d-flex">
@@ -274,7 +260,7 @@
 							<p class="card-text">$299.99</p>
 						</div>
 					</div>
-					<div class="card border-0 custom-card" style="width: 16rem;">
+					<div class="card border-0 custom-card cursor-pointer" style="width: 16rem;">
 						<img class="card-img-top card-product " src="./media/image-product.png" alt="" srcset="">
 						<div class="card-body">
 							<div class="rate d-flex">
